Fixed: se configura y se arregla el data cleaning

--- a/Modelo_Prediccion.ipynb
+++ b/Modelo_Prediccion.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-06-27T08:03:47.056493Z",
-     "start_time": "2024-06-27T08:03:47.052579Z"
+     "end_time": "2024-06-28T03:15:54.167785Z",
+     "start_time": "2024-06-28T03:15:51.061328Z"
     }
    },
    "source": [
@@ -16,39 +16,30 @@
     "from scipy.stats import poisson"
    ],
    "outputs": [],
-   "execution_count": 138
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-27T08:03:49.960385Z",
-     "start_time": "2024-06-27T08:03:49.939604Z"
+     "end_time": "2024-06-28T03:15:57.799927Z",
+     "start_time": "2024-06-28T03:15:57.772551Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "dict_table = pickle.load(open(\"dict_tablas\", \"rb\"))\n",
-    "df_fixture = pd.read_csv(\"df_2024_clean.csv\")\n",
-    "df_historical_data = pd.read_csv(\"df_data_historica_clean.csv\")"
+    "dict_table = pickle.load(open('dict_table','rb'))\n",
+    "df_historical_data = pd.read_csv('clean_america_worldcup_matches.csv')\n",
+    "df_fixture = pd.read_csv('clean_fifa_worldcup_fixture.csv')"
    ],
    "id": "1ad2f4e503ed61e3",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hitak\\AppData\\Local\\Temp\\ipykernel_16336\\4132078071.py:1: DeprecationWarning: numpy.core.numeric is deprecated and has been renamed to numpy._core.numeric. The numpy._core namespace contains private NumPy internals and its use is discouraged, as NumPy internals can change without warning in any release. In practice, most real-world usage of numpy.core is to access functionality in the public NumPy API. If that is the case, use the public NumPy API. If not, you are using NumPy internals. If you would still like to access an internal attribute, use numpy._core.numeric._frombuffer.\n",
-      "  dict_table = pickle.load(open(\"dict_tablas\", \"rb\"))\n"
-     ]
-    }
-   ],
-   "execution_count": 139
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-27T07:29:39.067403Z",
-     "start_time": "2024-06-27T07:29:39.053777Z"
+     "end_time": "2024-06-28T03:16:10.027653Z",
+     "start_time": "2024-06-28T03:16:08.684559Z"
     }
    },
    "cell_type": "code",
@@ -65,120 +56,21 @@
    "id": "79daead4c3e625da",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "                GoalsScored  GoalsConceded\n",
-       "Team                                      \n",
-       " Argentina         1.280000       1.280000\n",
-       " Bolivia           0.595238       1.857143\n",
-       " Brazil            1.791667       1.250000\n",
-       " Chile             0.954545       1.318182\n",
-       " Colombia          0.714286       1.095238\n",
-       "...                     ...            ...\n",
-       " Peru              1.042553       1.574468\n",
-       " Qatar             1.000000       1.500000\n",
-       " United States     0.625000       2.125000\n",
-       " Uruguay           0.972222       1.138889\n",
-       " Venezuela         0.595238       3.095238\n",
-       "\n",
-       "[76 rows x 2 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GoalsScored</th>\n",
-       "      <th>GoalsConceded</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Team</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Argentina</th>\n",
-       "      <td>1.280000</td>\n",
-       "      <td>1.280000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Bolivia</th>\n",
-       "      <td>0.595238</td>\n",
-       "      <td>1.857143</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Brazil</th>\n",
-       "      <td>1.791667</td>\n",
-       "      <td>1.250000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Chile</th>\n",
-       "      <td>0.954545</td>\n",
-       "      <td>1.318182</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Colombia</th>\n",
-       "      <td>0.714286</td>\n",
-       "      <td>1.095238</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Peru</th>\n",
-       "      <td>1.042553</td>\n",
-       "      <td>1.574468</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Qatar</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>United States</th>\n",
-       "      <td>0.625000</td>\n",
-       "      <td>2.125000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Uruguay</th>\n",
-       "      <td>0.972222</td>\n",
-       "      <td>1.138889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Venezuela</th>\n",
-       "      <td>0.595238</td>\n",
-       "      <td>3.095238</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>76 rows × 2 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "\"['HomeTeam'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyError\u001B[0m                                  Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[3], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m df_home \u001B[38;5;241m=\u001B[39m \u001B[43mdf_historical_data\u001B[49m\u001B[43m[\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mHomeTeam\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mHomeGoals\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mAwayGoals\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m]\u001B[49m\n\u001B[0;32m      2\u001B[0m df_away \u001B[38;5;241m=\u001B[39m df_historical_data[[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mAwayTeam\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mHomeGoals\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mAwayGoals\u001B[39m\u001B[38;5;124m'\u001B[39m]]\n\u001B[0;32m      4\u001B[0m df_home \u001B[38;5;241m=\u001B[39m df_home\u001B[38;5;241m.\u001B[39mrename(columns\u001B[38;5;241m=\u001B[39m{\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mHomeTeam\u001B[39m\u001B[38;5;124m'\u001B[39m:\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mTeam\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mHomeGoals\u001B[39m\u001B[38;5;124m'\u001B[39m: \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mGoalsScored\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mAwayGoals\u001B[39m\u001B[38;5;124m'\u001B[39m: \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mGoalsConceded\u001B[39m\u001B[38;5;124m'\u001B[39m})\n",
+      "File \u001B[1;32m~\\PycharmProjects\\pythonProject1\\.venv\\Lib\\site-packages\\pandas\\core\\frame.py:4108\u001B[0m, in \u001B[0;36mDataFrame.__getitem__\u001B[1;34m(self, key)\u001B[0m\n\u001B[0;32m   4106\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m is_iterator(key):\n\u001B[0;32m   4107\u001B[0m         key \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mlist\u001B[39m(key)\n\u001B[1;32m-> 4108\u001B[0m     indexer \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcolumns\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_get_indexer_strict\u001B[49m\u001B[43m(\u001B[49m\u001B[43mkey\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mcolumns\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m[\u001B[38;5;241m1\u001B[39m]\n\u001B[0;32m   4110\u001B[0m \u001B[38;5;66;03m# take() does not accept boolean indexers\u001B[39;00m\n\u001B[0;32m   4111\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mgetattr\u001B[39m(indexer, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdtype\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;28;01mNone\u001B[39;00m) \u001B[38;5;241m==\u001B[39m \u001B[38;5;28mbool\u001B[39m:\n",
+      "File \u001B[1;32m~\\PycharmProjects\\pythonProject1\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6200\u001B[0m, in \u001B[0;36mIndex._get_indexer_strict\u001B[1;34m(self, key, axis_name)\u001B[0m\n\u001B[0;32m   6197\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m   6198\u001B[0m     keyarr, indexer, new_indexer \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_reindex_non_unique(keyarr)\n\u001B[1;32m-> 6200\u001B[0m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_raise_if_missing\u001B[49m\u001B[43m(\u001B[49m\u001B[43mkeyarr\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mindexer\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43maxis_name\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m   6202\u001B[0m keyarr \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mtake(indexer)\n\u001B[0;32m   6203\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(key, Index):\n\u001B[0;32m   6204\u001B[0m     \u001B[38;5;66;03m# GH 42790 - Preserve name from an Index\u001B[39;00m\n",
+      "File \u001B[1;32m~\\PycharmProjects\\pythonProject1\\.venv\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:6252\u001B[0m, in \u001B[0;36mIndex._raise_if_missing\u001B[1;34m(self, key, indexer, axis_name)\u001B[0m\n\u001B[0;32m   6249\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNone of [\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mkey\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m] are in the [\u001B[39m\u001B[38;5;132;01m{\u001B[39;00maxis_name\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m]\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m   6251\u001B[0m not_found \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mlist\u001B[39m(ensure_index(key)[missing_mask\u001B[38;5;241m.\u001B[39mnonzero()[\u001B[38;5;241m0\u001B[39m]]\u001B[38;5;241m.\u001B[39munique())\n\u001B[1;32m-> 6252\u001B[0m \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mnot_found\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m not in index\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
+      "\u001B[1;31mKeyError\u001B[0m: \"['HomeTeam'] not in index\""
+     ]
     }
    ],
-   "execution_count": 87
+   "execution_count": 3
   },
   {
    "metadata": {
